--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
     "preview": "vite preview",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "test": "vitest",
-    "generate-mappings": "tsx scripts/generate-mappings.ts"
+    "test:run": "vitest --run",
+    "test:coverage": "vitest --run --coverage",
+    "test:ui": "vitest --ui",
+    "generate-mappings": "tsx scripts/generate-mappings.ts",
+    "verify": "./scripts/verify-tests.sh"
   },
   "dependencies": {
     "@tanstack/react-query": "^5.62.0",
@@ -29,6 +33,7 @@
     "@radix-ui/react-dialog": "^1.1.4",
     "@radix-ui/react-dropdown-menu": "^2.1.4",
     "@radix-ui/react-select": "^2.1.4",
+    "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.1.0",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
@@ -40,6 +45,7 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.14",
     "globals": "^17.0.0",
+    "jsdom": "^27.4.0",
     "playwright": "^1.49.1",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.17",
